<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUnivActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailUnivActivity"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/detail_img_univ"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/tv_detail_name_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12sp"/>

        <TextView
            android:id="@+id/tv_detail_country_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12sp"/>

        <TextView
            android:id="@+id/tv_detail_country_rank_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_rank"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12sp"/>

        <TextView
            android:id="@+id/tv_detail_desc_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_univ"
            android:textSize="16sp"
            android:layout_marginBottom="12sp"/>

        <Button
            android:id="@+id/btn_detail_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_univ"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12sp"
            android:gravity="center"/>


    </LinearLayout>


</ScrollView>